# hanif-finance

./: .gitignore  AGENTS.md  PLAN.md  README.md  build_exe.py  pyproject.toml
hanif_finance/: __init__.py  cli.py  db.py
